fix: 本番用CIの可読性を向上

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,13 @@
+# ══════════════════════════════════════════════════════════════════════════════
+#                      🎭 Playwright E2E Tests Workflow                         
+#                                                                                 
+#   Purpose: PRごとのE2Eテスト実行とレポート生成                                   
+#                                                                                
+#   Structure:                                                                     
+#     1. e2e            → 🧪 [テスト] E2Eテスト実行                              
+#     2. publish_report → 📋 [レポート] GitHub Pagesへ公開                       
+# ══════════════════════════════════════════════════════════════════════════════
+
 name: Playwright E2E Tests
 
 on:
@@ -27,6 +37,10 @@ env:
   PLAYWRIGHT_BROWSERS: chromium
 
 jobs:
+  # ════════════════════════════════════════════════════════════════════════════
+  # ██ Job 1: e2e
+  # ██ 🧪 E2Eテスト実行
+  # ════════════════════════════════════════════════════════════════════════════
   e2e:
     runs-on: ubuntu-latest
     outputs:
@@ -39,24 +53,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # pnpmのセットアップ
-      - name: Setup Node.js
-        uses: actions/setup-node@v6
+      # ────────────────────────────────────────────────────────────────────
+      #  📦 Package Manager Setup (Composite Action)
+      # ────────────────────────────────────────────────────────────────────
+      - name: Setup Package Manager
+        uses: ./.github/actions/setup-package-manager
         with:
-          node-version: '24'
+          package-manager: pnpm
       
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-      
-      # pnpm依存関係のキャッシュ（最適化版）
+      # ────────────────────────────────────────────────────────────────────
+      #  🚀 依存パッケージキャッシュ
+      # ────────────────────────────────────────────────────────────────────
       - name: Get pnpm store directory
         id: pnpm-cache
-        run: |
-          echo "dir=$(pnpm store path)" >> $GITHUB_OUTPUT
+        run: echo "dir=$(pnpm store path)" >> $GITHUB_OUTPUT
       
-      # キャッシュ戦略の改善: store + node_modules + lockfile hash
       - name: Cache pnpm store and node_modules
         id: deps-cache
         uses: actions/cache@v5
@@ -68,17 +79,17 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-          
-      # インストール時間の計測
+
+      # ────────────────────────────────────────────────────────────────────
+      #  ⏱️ 依存インストール (計測付き)
+      # ────────────────────────────────────────────────────────────────────
       - name: Install dependencies
         id: install-deps
         run: |
           START=$(date +%s)
           
-          # キャッシュヒット時は frozen-lockfile でスキップ可能な処理を最小化
           if [ "${{ steps.deps-cache.outputs.cache-hit }}" = "true" ]; then
             echo "📦 Cache hit - using cached dependencies"
-            # prefer-offline で高速化（キャッシュ優先）
             pnpm install --frozen-lockfile --prefer-offline
           else
             echo "📦 Cache miss - installing from registry"
@@ -90,7 +101,9 @@ jobs:
           echo "install-time=${DURATION}s" >> $GITHUB_OUTPUT
           echo "⏱️ Install took ${DURATION}s"
       
-      # Playwrightのバージョン取得とキャッシュ
+      # ────────────────────────────────────────────────────────────────────
+      #  🎭 Playwrightブラウザキャッシュ
+      # ────────────────────────────────────────────────────────────────────
       - name: Get Playwright version
         id: playwright-version
         run: |
@@ -106,6 +119,11 @@ jobs:
           restore-keys: |
             playwright-browsers-${{ runner.os }}-${{ steps.playwright-version.outputs.version }}-
       
+      # ────────────────────────────────────────────────────────────────────
+      #  🎭 Playwrightブラウザインストール
+      #  キャッシュミス → フルインストール
+      #  キャッシュヒット → システム依存関係のみ
+      # ────────────────────────────────────────────────────────────────────
       - name: Install Playwright browsers
         id: install-browsers
         if: steps.playwright-cache.outputs.cache-hit != 'true'
@@ -128,12 +146,17 @@ jobs:
           echo "sys-deps-time=${DURATION}s" >> $GITHUB_OUTPUT
           echo "⏱️ System dependencies install took ${DURATION}s"
       
+      # ────────────────────────────────────────────────────────────────────
+      #  🧪 E2Eテスト実行
+      # ────────────────────────────────────────────────────────────────────
       - name: Run E2E tests
         id: playwright-tests
         continue-on-error: true
         run: pnpm exec playwright test
       
-      # GitHub Summaryに結果とパフォーマンス情報を出力
+      # ────────────────────────────────────────────────────────────────────
+      #  📊 テスト結果サマリー生成
+      # ────────────────────────────────────────────────────────────────────
       - name: Generate test summary
         if: always()
         run: |
@@ -152,7 +175,6 @@ jobs:
             echo "⚠️ No test report generated" >> $GITHUB_STEP_SUMMARY
           fi
           
-          # パフォーマンス情報を追加
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### ⚡ Performance Info" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -177,7 +199,6 @@ jobs:
             fi
           fi
           
-          # ベンチマークとの比較
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📊 Performance Comparison" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -196,15 +217,21 @@ jobs:
               echo "| Playwright Full Install | $BROWSERS_TIME | N/A | ~40-60s |" >> $GITHUB_STEP_SUMMARY
             fi
           fi
-          
+
+      # ────────────────────────────────────────────────────────────────────
+      #  📤 テストレポートアップロード
+      # ────────────────────────────────────────────────────────────────────
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
-  
-  # ここからレポートpush処理
+
+  # ════════════════════════════════════════════════════════════════════════════
+  # ██ Job 2: publish_report
+  # ██ 📋 GitHub Pagesへレポート公開
+  # ════════════════════════════════════════════════════════════════════════════
   publish_report:
     name: Publish Report
     if: "success() || needs.e2e.result == 'failure'"
@@ -214,6 +241,9 @@ jobs:
     env:
       HTML_REPORT_URL_PATH: reports/${{ github.ref_name }}/${{ github.run_id }}/${{ github.run_attempt }}
     steps:
+      # ────────────────────────────────────────────────────────────────────
+      #  📥 gh-pagesブランチのチェックアウト
+      # ────────────────────────────────────────────────────────────────────
       - name: Checkout GitHub Pages Branch
         uses: actions/checkout@v4
         with:
@@ -224,12 +254,18 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
+      # ────────────────────────────────────────────────────────────────────
+      #  📥 レポートダウンロード
+      # ────────────────────────────────────────────────────────────────────
       - name: Download zipped HTML report
         uses: actions/download-artifact@v4
         with:
           name: playwright-report
           path: ${{ env.HTML_REPORT_URL_PATH }}
 
+      # ────────────────────────────────────────────────────────────────────
+      #  📤 レポートをGitHub Pagesへプッシュ
+      # ────────────────────────────────────────────────────────────────────
       - name: Push HTML Report
         timeout-minutes: 3
         run: |
@@ -250,6 +286,9 @@ jobs:
             fi
           done
 
+      # ────────────────────────────────────────────────────────────────────
+      #  💬 PRにコメント投稿
+      # ────────────────────────────────────────────────────────────────────
       - name: Output Report URL as Workflow Annotation and PR Comment
         if: github.event_name == 'pull_request'
         run: |
